--- a/static/begin.css
+++ b/static/begin.css
@@ -36,13 +36,7 @@
 .input-name {
     border-radius: 5px;
     text-align: center;
-}
-
-.input-name:focus {
-    background-color: #17769c;
-    color: white;
-    text-align: center;
-    font-size: 1em;
+    border: 1px solid black;
     font-family: 'Ubuntu', sans-serif;
 }
 
@@ -50,6 +44,9 @@
     font-family: 'Press Start 2P', cursive;
     width: 130px;
     background: #ededed;
+    border-radius: 5px;
+    border: 1px solid black;
+    padding: 5px;
 }
 
 .submit-name:focus {
