--- a/templates/begin.html
+++ b/templates/begin.html
@@ -10,9 +10,6 @@
             document.addEventListener('DOMContentLoaded', function() {
                 
                 var button = document.querySelector('#submit');
-                // if(localStorage.getItem('displayName')) {
-                //     document.querySelector('#greeting-welcome').innerHTML = "Hello, " + localStorage.getItem('displayName') + "!";
-                // }
 
                 button.onclick = function() {
                     var name = document.querySelector('#name').value;
@@ -33,12 +30,12 @@
             <div class="prompt-1">
                 <h1 class="welcome">Welcome to Flack!</h1><br><br>
                 <h3 class="prompt-name">Choose a display name:</h3>
-                <input id="name" name="input-name" type="text" class="input-name" size="40" maxlength="20" required><br><br>
+                <input id="name" name="input-name" type="text" class="input-name" size="40" maxlength="20" autocomplete="off" required><br><br>
                 <button class="submit-name" id="submit">Submit</button>
             </div>
             <div class="prompt-2">
                 <h1 class="welcome" id="greeting-welcome"></h1><br>
-                <img src="../static/heart.webp" height="100" style="animation: throb 1s infinite;"><br><br><br>
+                <img src="../static/heart.png" height="100" style="animation: throb 1s infinite;"><br><br><br>
                 <form action="{{ url_for('home') }}" method="get">
                     <button class="submit-name" type="submit">Let's go</button>
                 </form>
